--- a/QBServer/.settings/org.eclipse.wst.common.component
+++ b/QBServer/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,9 @@
     <wb-module deploy-name="QBServer">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <dependent-module archiveName="QuestionBank.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/QuestionBank/QuestionBank">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="QBServer"/>
         <property name="java-output-path" value="/QBServer/build/classes"/>
     </wb-module>
